feat: projeto completo e README adicionado

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=paschoalotto_db;Username=admin;Password=admin123"
+    "DefaultConnection": "Host=localhost;Port=5432;Database=randomuserdb;Username=admin;Password=1234"
   },
   "RandomUserApi": {
     "Url": "https://randomuser.me/api/"
